--- a/examples/kafka-boshlite.yml
+++ b/examples/kafka-boshlite.yml
@@ -20,7 +20,7 @@ update:
 resource_pools:
  - name: infrastructure1
    network: lsn
-   size: 2
+   size: 4
    stemcell:
     name: bosh-warden-boshlite-ubuntu-trusty-go_agent
     version: latest
@@ -40,6 +40,7 @@ networks:
         cloud_properties: {}
       - range: 10.244.8.8/30
         reserved: [10.244.8.9]
+        static: [10.244.8.10]
         cloud_properties: {}
       - range: 10.244.8.12/30
         reserved: [10.244.8.13]
@@ -50,6 +51,7 @@ networks:
       - range: 10.244.8.20/30
         reserved: [10.244.8.21]
         cloud_properties: {}
+ 
 jobs: 
  - name: zookeeper
    templates:
@@ -59,3 +61,16 @@ jobs:
    persistent_disk: 4096
    networks:
    - name: lsn
+     static_ips: 10.244.8.10
+
+ - name: broker
+   templates:
+   - name: broker
+   instances: 2
+   resource_pool: infrastructure1
+   persistent_disk: 10000
+   networks:
+   - name: lsn
+  
+properties:
+  zookeeper: '10.244.8.10'  
